// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Пример чуток посложнее Component with additional props 1`] = `
<Component
  gender="it ⫷(°⧭°)⫸"
  name="Clown"
>
  <div>
    Clown - it ⫷(°⧭°)⫸
  </div>
</Component>
`;

exports[`Пример чуток посложнее Component with props 1`] = `
<Component
  gender="it ⫷(°⧭°)⫸"
  name="Pennywise"
>
  <div>
    Pennywise - it ⫷(°⧭°)⫸
  </div>
</Component>
`;
